--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
 {#    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>#}
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='hamburger2.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style2.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="/static/hamburger2.css">{#{{ url_for('static', filename='hamburger2.css') }}#}
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <script src="{{ url_for('static', filename='tmp/three.js.download') }}"></script>
     <script src="{{ url_for('static', filename='tmp/leap-0.6.4.js.download') }}"></script>
@@ -48,7 +48,7 @@
 {% include 'menu.html' %}
 {#transform: rotateY(180deg);#}
 {% include 'interactiveLeap.html' %}
-<main style="background-color:transparent; margin-left:300px;">
+<main style="background-color:transparent">{#; margin-left:300px;#}
     <div id="target_div">Watch this space...</div>
     <div id="messageContainer_div">Message Container</div>
     <style>
@@ -80,6 +80,23 @@
             {%  include 'displaySection.html' %}
         </div>
     </div>
+    {#
+        work on this section so eyes are split for the HMD
+        add properties file and/or a way to change in the menu
+    #}
+    {#<div id="overlay" style="background-color:transparent;margin-left:0">
+        <header style="background-color:transparent; margin-left:0">
+            <details open style="background-color:transparent; margin-left:0">
+                <div style="display:table-row;background-color:transparent;margin-left:0">
+                     <div id="frame1"
+                         style="margin:0;width:49%;display:table-cell;background-color:transparent;padding-right:20px;transform: rotateY(180deg);"><img src="{{ url_for('video_feed') }}?id=0"></div>
+                    <div id="frame2"
+                         style="margin:0;width:49%;display:table-cell;background-color:transparent;transform: rotateY(180deg);"><img src="{{ url_for('video_feed') }}?id=0"></div>
+                    </br>
+                </div>
+            </details>
+        </header>
+    </div>#}
 </main>
 
 {% include 'javascript.html' %}
