--- a/templates/interactiveLeap.html
+++ b/templates/interactiveLeap.html
@@ -15,6 +15,8 @@
     var scene = Leap.loopController.plugins.boneHand.scene;
     var camera = Leap.loopController.plugins.boneHand.camera;
     var renderer = Leap.loopController.plugins.boneHand.renderer;
+    camera.fov = 45;
+    {#console.log("camera fov " + camera.fov);#}
     camera.position.set(0, 0.3, 0.6);
 
     {#var controls = new THREE.LeapCameraControls(camera);#}
@@ -42,9 +44,14 @@
         longThrow / 2 + 0.0002
     );
 
-    var sphereGeom =  new THREE.SphereGeometry( 40, 32, 16 );
+    var sphereGeom =  new THREE.SphereGeometry( 1000, 32, 16 );
     var blueMaterial = new THREE.MeshBasicMaterial( { color: 0x0000ff, transparent: false, opacity: 0.5 } );
     var sphere = new THREE.Mesh( sphereGeom, blueMaterial );
+    sphere.position.set(0,
+        planeMesh.geometry.parameters.height / 2 - longThrow / 2,
+        longThrow / 2 + 0.0002)
+
+    base.add(sphere);
 
     base.add(planeMesh);
     scene.add(base);
