--- a/templates/index.html
+++ b/templates/index.html
@@ -47,11 +47,11 @@
 <body style="background-color:black">
 {% include 'menu.html' %}
 {#transform: rotateY(180deg);#}
-{% include 'interactiveLeap.html' %}
+{#{% include 'interactiveLeap.html' %}#}
 <main style="background-color:transparent; margin-left:300px;">
     <div id="target_div">Watch this space...</div>
     <div id="messageContainer_div">Message Container</div>
-    <style>
+{#    <style>
         #gamecontainer {
             width: 1900px;
             height: 1280px;
@@ -69,13 +69,13 @@
             width: 100%;
             height: 100%;
             z-index: 2;}
-    </style>
+    </style>#}
     <!--
         div over canvas -- http://jsfiddle.net/n992V/
         https://stackoverflow.com/questions/15861485/placing-a-div-over-a-canvas-in-html5
     -->
     <div class="gamecontainer" style="display:table-row;background-color:transparent;margin-left:300px">
-        <canvas width="800" height="600" class="leap-boneHand" style="width: 800px; height: 600px;"></canvas>
+{#        <canvas width="800" height="600" class="leap-boneHand" style="width: 800px; height: 600px;"></canvas>#}
         <div id="gamestartscreen">
             {%  include 'displaySection.html' %}
         </div>
