--- a/templates/index.html
+++ b/templates/index.html
@@ -15,35 +15,35 @@
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <script src="{{ url_for('static', filename='tmp/three.js.download') }}"></script>
-    <script src="{{ url_for('static', filename='tmp/leap-0.6.4.js.download') }}"></script>
-    <script src="{{ url_for('static', filename='tmp/leap-plugins-0.1.11pre.js.download') }}"></script>
-    <script src="{{ url_for('static', filename='tmp/leap-widgets-0.1.0.js.download') }}"></script>
-    <script src="{{ url_for('static', filename='tmp/OrbitControls.js.download') }}"></script>
-    <script src="{{ url_for('static', filename='leap/LeapCameraControls.js') }}"></script>
-    <script src="{{ url_for('static', filename='leap/LeapObjectControls.js') }}"></script>
+{#    <script src="{{ url_for('static', filename='tmp/three.js.download') }}"></script>#}
+{#    <script src="{{ url_for('static', filename='tmp/leap-0.6.4.js.download') }}"></script>#}
+{#    <script src="{{ url_for('static', filename='tmp/leap-plugins-0.1.11pre.js.download') }}"></script>#}
+{#    <script src="{{ url_for('static', filename='tmp/leap-widgets-0.1.0.js.download') }}"></script>#}
+{#    <script src="{{ url_for('static', filename='tmp/OrbitControls.js.download') }}"></script>#}
+{#    <script src="{{ url_for('static', filename='leap/LeapCameraControls.js') }}"></script>#}
+{#    <script src="{{ url_for('static', filename='leap/LeapObjectControls.js') }}"></script>#}
 
-    <style>
-        body {
-            margin: 0;
-        }
-
-        canvas.leap-boneHand {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-
-        #view-source {
-            position: absolute;
-            top: 0;
-            right: 0;
-            margin: 10px;
-            z-index: 10;
-        }
-    </style>
+{#    <style>#}
+{#        body {#}
+{#            margin: 0;#}
+{#        }#}
+{##}
+{#        canvas.leap-boneHand {#}
+{#            position: absolute;#}
+{#            top: 0;#}
+{#            left: 0;#}
+{#            width: 100%;#}
+{#            height: 100%;#}
+{#        }#}
+{##}
+{#        #view-source {#}
+{#            position: absolute;#}
+{#            top: 0;#}
+{#            right: 0;#}
+{#            margin: 10px;#}
+{#            z-index: 10;#}
+{#        }#}
+{#    </style>#}
 </head>
 <body style="background-color:black">
 {% include 'menu.html' %}
