--- a/templates/mainIndex.html
+++ b/templates/mainIndex.html
@@ -52,7 +52,7 @@
 <main style="background-color:transparent; margin-left:300px;">
     <div id="target_div">Watch this space...</div>
     <div id="messageContainer_div">Message Container</div>
-{#    <style>
+    <style>
         #gamecontainer {
             width: 1900px;
             height: 1280px;
@@ -66,11 +66,14 @@
             position: absolute;
             margin: 0 auto;
             top: 0;
+            {#width: 100%;#}
+            {#height: 100%;#}
             left: 300px;
-            width: 100%;
-            height: 100%;
-            z-index: 2;}
-    </style>#}
+            width: 300px;
+            height: 300px;
+            z-index: 2;
+        }
+    </style>
     <!--
         div over canvas -- http://jsfiddle.net/n992V/
         https://stackoverflow.com/questions/15861485/placing-a-div-over-a-canvas-in-html5
