--- a/templates/main2.html
+++ b/templates/main2.html
@@ -16,10 +16,14 @@
         }
     </style>
 
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
-    <script src="https://cdn.babylonjs.com/babylon.js"></script>
-    <script src="https://docs.opencv.org/4.5.5/opencv.js"></script>
+{#    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>#}
+    <script src="/static/js/camera_utils.js"></script>
+{#    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>#}
+    <script src="/static/js/hands.js"></script>
+{#    <script src="https://cdn.babylonjs.com/babylon.js"></script>#}
+    <script src="/static/js/babylon.js"></script>
+{#    <script src="https://docs.opencv.org/4.5.5/opencv.js"></script>#}
+    <script src="/static/js/opencv.js"></script>
 </head>
 <body>
     <video id="video" autoplay></video>
@@ -364,7 +368,8 @@
             requestAnimationFrame(detectFaces);
         }
     </script>
-    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+{#    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>#}
+    <script src="/static/js/adapter-latest.js"></script>
     <script src="/static/main.js" async></script>
 </body>
 </html>
