updating some work

--- a/templates/main2.html
+++ b/templates/main2.html
@@ -16,14 +16,14 @@
         }
     </style>
 
-{#    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>#}
-    <script src="/static/js/camera_utils.js"></script>
-{#    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>#}
-    <script src="/static/js/hands.js"></script>
-{#    <script src="https://cdn.babylonjs.com/babylon.js"></script>#}
-    <script src="/static/js/babylon.js"></script>
-{#    <script src="https://docs.opencv.org/4.5.5/opencv.js"></script>#}
-    <script src="/static/js/opencv.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
+{#    <script src="/static/js/camera_utils.js"></script>#}
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
+{#    <script src="/static/js/hands.js"></script>#}
+    <script src="https://cdn.babylonjs.com/babylon.js"></script>
+{#    <script src="/static/js/babylon.js"></script>#}
+    <script src="https://docs.opencv.org/4.5.5/opencv.js"></script>
+{#    <script src="/static/js/opencv.js"></script>#}
 </head>
 <body>
     <video id="video" autoplay></video>
@@ -393,6 +393,7 @@
         let classifier;
         cv['onRuntimeInitialized'] = async () => {
             const response = await fetch('https://raw.githubusercontent.com/opencv/opencv/master/data/haarcascades/haarcascade_frontalface_default.xml');
+            {#const response = await fetch('/static/opencv/haarcascade_frontalface_default.xml');#}
             const buffer = await response.arrayBuffer();
             cv.FS_createDataFile('/', 'cascade.xml', new Uint8Array(buffer), true, false, false);
             classifier = new cv.CascadeClassifier();
@@ -455,8 +456,8 @@
             requestAnimationFrame(detectFaces);
         }
     </script>
-{#    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>#}
-    <script src="/static/js/adapter-latest.js"></script>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+{#    <script src="/static/js/adapter-latest.js"></script>#}
     <script src="/static/main.js" async></script>
 </body>
 </html>
