reverted changes from before

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,2 @@
-{%  include 'server_gestures.html' %}
-{# {%  include 'main2.html' %} #}
+{#{%  include 'server_gestures.html' %}#}
+{%  include 'main2.html' %}
