added test cases for markdown, pdfviewer, note taking

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,2 @@
-{%  include 'server_gestures.html' %}
-{#{%  include 'main2.html' %}#}
+{%  include 'main2.html' %}
+{#{%  include 'inputOutputTest.html' %}#}
